--- a/package.json
+++ b/package.json
@@ -1,81 +1,79 @@
 {
   "name": "@app-studio/react-hook",
-  "version": "0.0.4",
-  "description": "React Hook",
-  "main": "./dist/index.js",
   "repository": "git@github.com:rize-network/react-hook.git",
   "author": "Steedmonteiro <steed@rize.network>",
+  "version": "0.0.4",
   "license": "MIT",
-  "bugs": "https://github.com/rize-network/react-hook/issues",
-  "keywords": [
-    "react",
-    "typescript"
+  "description": "React Hook",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "module": "dist/react-hook.esm.js",
+  "files": [
+    "dist",
+    "src"
   ],
-  "peerDependencies": {
-    "react": ">= 17.x.x"
+  "engines": {
+    "node": ">=10"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.16.8",
-    "@babel/core": "^7.16.7",
-    "@babel/plugin-syntax-flow": "^7.16.7",
-    "@babel/plugin-transform-typescript": "^7.16.7",
-    "@babel/preset-env": "^7.16.7",
-    "@babel/preset-flow": "^7.16.7",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@commitlint/cli": "^16.0.1",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@types/react": "17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.4.5",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-import": "^1.13.3",
-    "babel-plugin-inline-import": "^3.0.0",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "chalk": "^5.0.0",
-    "commitlint": "^16.0.1",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-formatter-codeframe": "^7.32.1",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^25.3.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.1.7",
-    "prettier": "^2.1.2",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.5.4"
-  },
+  "bugs": "https://github.com/rize-network/react-hook/issues",
   "scripts": {
-    "build": "tsc",
-    "validate": "tsc --project tsconfig.json --noEmit",
-    "prepare": "husky install",
-    "clean": "rimraf ./dist",
-    "lint": "npm run eslint && npm run prettier",
-    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
-    "lint-staged": "lint-staged",
-    "lint-staged:eslint": "eslint --ext .js,.jsx,.ts,.tsx ",
-    "eslint:fix": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx --format=codeframe ./src",
-    "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=codeframe ./src",
-    "prettier:fix": "prettier --write ./src",
-    "prettier": "prettier --check ./src",
-    "prepublishOnly": "npm run clean && npm run build",
-    "upgrade": "ncu -u"
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test --passWithNoTests",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
-  "lint-staged": {
-    "./src/**/*.{md,json}": [
-      "prettier --write"
-    ],
-    "./src/**/*.{tsx,ts,js}": [
-      "eslint --cache --fix",
-      "prettier --write"
-    ]
+  "peerDependencies": {
+    "react": ">=16"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "size-limit": [
+    {
+      "path": "dist/react-hook.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/react-hook.esm.js",
+      "limit": "10 KB"
+    }
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.16.10",
+    "@size-limit/preset-small-lib": "^7.0.5",
+    "@size-limit/webpack": "^7.0.5",
+    "@size-limit/webpack-why": "^7.0.5",
+    "@storybook/addon-essentials": "^6.4.13",
+    "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-links": "^6.4.13",
+    "@storybook/addons": "^6.4.13",
+    "@storybook/react": "^6.4.13",
+    "@types/lodash": "^4.14.178",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-transform-rename-import": "^2.3.0",
+    "husky": "^7.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
+    "size-limit": "^7.0.5",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "enquire-js": "^0.2.1"
