--- a/package.json
+++ b/package.json
@@ -20,12 +20,20 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "lint": "npm run eslint && npm run prettier",
+    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
+    "lint-staged": "lint-staged",
+    "lint-staged:eslint": "eslint --ext .js,.jsx,.ts,.tsx ",
+    "eslint:fix": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx --format=codeframe ./src",
+    "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=codeframe ./src",
+    "prettier:fix": "prettier --write ./src",
+    "prettier": "prettier --check ./src",
+    "prepare": "husky install",
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "upgrade": "ncu -u"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -34,12 +42,6 @@
     "hooks": {
       "pre-commit": "tsdx lint"
     }
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
   },
   "size-limit": [
     {
@@ -51,11 +53,14 @@
       "limit": "10 KB"
     }
   ],
+  "dependencies": {
+    "enquire-js": "^0.2.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.16.10",
+    "@commitlint/cli": "^16.0.3",
+    "@commitlint/config-conventional": "^16.0.0",
     "@size-limit/preset-small-lib": "^7.0.5",
-    "@size-limit/webpack": "^7.0.5",
-    "@size-limit/webpack-why": "^7.0.5",
     "@storybook/addon-essentials": "^6.4.13",
     "@storybook/addon-info": "^5.3.21",
     "@storybook/addon-links": "^6.4.13",
@@ -64,9 +69,23 @@
     "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "babel-loader": "^8.2.3",
-    "babel-plugin-transform-rename-import": "^2.3.0",
+    "chalk": "^5.0.0",
+    "commitlint": "^16.0.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-formatter-codeframe": "^7.32.1",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^25.3.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
+    "lint-staged": "^12.2.1",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
@@ -75,7 +94,13 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   },
-  "dependencies": {
-    "enquire-js": "^0.2.1"
+  "lint-staged": {
+    "./src/**/*.{md,json}": [
+      "prettier --write"
+    ],
+    "./src/**/*.{tsx,ts,js}": [
+      "eslint --cache --fix",
+      "prettier --write"
+    ]
   }
 }
